--- a/Proiecto/Proiecto/Proiecto/Proiecto.csproj
+++ b/Proiecto/Proiecto/Proiecto/Proiecto.csproj
@@ -109,7 +109,9 @@
   <ItemGroup>
     <Compile Include="FPSCounter.cs" />
     <Compile Include="GraphicsEngine.cs" />
+    <Compile Include="InputEngine.cs" />
     <Compile Include="LogicEngine.cs" />
+    <Compile Include="MathEngine.cs" />
     <Compile Include="MouseBullet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
