--- a/Proiecto/Proiecto/Proiecto/Proiecto.csproj
+++ b/Proiecto/Proiecto/Proiecto/Proiecto.csproj
@@ -107,12 +107,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnemySmallDebris.cs" />
     <Compile Include="FPSCounter.cs" />
+    <Compile Include="PlayerBullet.cs" />
+    <Compile Include="PlayerShip.cs" />
     <Compile Include="GraphicsEngine.cs" />
     <Compile Include="InputEngine.cs" />
     <Compile Include="LogicEngine.cs" />
     <Compile Include="MathEngine.cs" />
-    <Compile Include="MouseBullet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
@@ -154,6 +156,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
