Fixed the Origins of existing objects to be more accurate,  added a HUD class which simply tracks score lives ect.  The HUD class may be removed later since it is so simply,  but it does add clarity personally.  Collision detection no longer gives a yes/no and gives instead a float representing the distance between the objects to allow computation of grazing later.  Left shift causes slow moving,  and the arrow keys can be used to move.  Space now shoots.  Bullets can destroy the rocks spawning from top of screen and textures have been added for power ups but are not implemented.

--- a/Proiecto/Proiecto/Proiecto/Proiecto.csproj
+++ b/Proiecto/Proiecto/Proiecto/Proiecto.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="EnemySmallDebris.cs" />
     <Compile Include="FPSCounter.cs" />
+    <Compile Include="HUD.cs" />
     <Compile Include="PlayerBullet.cs" />
     <Compile Include="PlayerShip.cs" />
     <Compile Include="GraphicsEngine.cs" />
