--- a/Proiecto/Proiecto/Proiecto/Proiecto.csproj
+++ b/Proiecto/Proiecto/Proiecto/Proiecto.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicDirectedEnemy.cs" />
     <Compile Include="EnemyBullet.cs" />
     <Compile Include="EnemySmallDebris.cs" />
     <Compile Include="FPSCounter.cs" />
